--- a/Practice/appsettings.json
+++ b/Practice/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost; Database=rpg; Username=antonio; Password=1234;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
