Upgrade dotnet version and packages

--- a/Practice/appsettings.json
+++ b/Practice/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost; Database=rpg; Username=antonio; Password=1234;"
+    "DefaultConnection": "Host=localhost; Database=postgres; Username=antonio; Password=1234;"
   },
   "Logging": {
     "LogLevel": {
